syntax = "proto3";

service Company {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
}

message CompanyItem {
	string id = 1; //uuid
	string name = 2;
	string owner = 3;
	string about = 4;
	string address = 5;
}

message Session {
        string id = 1;
        string username = 2;    
        int64 created = 3;      // unix
        int64 expires = 4;      // unix
}

message CreateRequest {
	CompanyItem company = 1;
}

message CreateResponse {
	string id = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
}

message ReadRequest {
	string id = 1;
}

message ReadResponse {
	CompanyItem company = 1;
}

message UpdateRequest {
	CompanyItem company = 1;
}

message UpdateResponse {
}
